# DataEngineeringToolkit

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  replit.nix  requirements.txt
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/pip-23.2.1-py3-none-any/pip-23.2.1.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/setuptools-68.0.0-py3-none-any/setuptools-68.0.0.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/wheel-0.41.0-py3-none-any/wheel-0.41.0.dist-info/: RECORD
models/transformations/pandas/: pandas_transformations_models.py
services/formatting/: i_formatter.py
services/formatting/pandas/: pandas_formatter.py
services/storage/: default_storage_service.py  i_storage_service.py
services/transformations/: i_transformations.py
services/transformations/pandas/: pandas_transformations.py
services/util/: enforce_attributes_meta.py
src/data_engineering_toolkit/: __init__.py
src/data_engineering_toolkit/brokers/storage/: i_storage_broker.py
src/data_engineering_toolkit/brokers/storage/pandas/: pandas_csv_storage_broker.py  pandas_excel_storage_broker.py  pandas_feather_storage_broker.py  pandas_fwf_storage_broker.py  pandas_gbq_storage_broker.py  pandas_hdf5_storage_broker.py  pandas_html_storage_broker.py  pandas_json_storage_broker.py  pandas_latex_storage_broker.py  pandas_orc_storage_broker.py  pandas_parquet_storage_broker.py  pandas_sas_storage_broker.py  pandas_sql_storage_broker.py  pandas_stata_storage_broker.py  pandas_storage_broker.py  pandas_xml_storage_broker.py
src/data_engineering_toolkit/models/formatting/pandas/: pandas_formatter_models.py
src/data_engineering_toolkit/models/scheduling/: job_model.py  scheduler_model.py
src/data_engineering_toolkit/models/state_machine/: cycleable_states_model.py  state_definition_model.py  state_machine_config_model.py  transition_definition_model.py
src/data_engineering_toolkit/models/transformations/pandas/: pandas_transformations_models.py
src/data_engineering_toolkit/services/cleaning/pandas/: pandas_cleaning.py
src/data_engineering_toolkit/services/cleaning/pandas/select_features_stratergies/: k_neighbors_regressor_strategy.py  select_features_k_neighbors_regressor_strategy.py  select_features_stratergy_function_template.py
src/data_engineering_toolkit/services/encyption/core/: anonymization_encryption.py  diffie_hellman_encryption.py  encryption_strategies.py  i_encryption_strategy.py  primes.py  pseudoanonymization_encryption.py  scramble_encryption.py  substitution_encryption.py
src/data_engineering_toolkit/services/encyption/pandas/: pandas_encryptor.py
src/data_engineering_toolkit/services/formatting/: i_formatter.py
src/data_engineering_toolkit/services/formatting/pandas/: pandas_formatter.py
src/data_engineering_toolkit/services/labelling/pandas/: pandas_labelling.py
src/data_engineering_toolkit/services/profiling/pandas/: pandas_profiling.py
src/data_engineering_toolkit/services/rules/: base_rule.py  rule_registry.py
src/data_engineering_toolkit/services/rules/compute/: base_compute_rule.py  compute_rule_registry.py
src/data_engineering_toolkit/services/rules/conditional/: i_dataframe_checker.py
src/data_engineering_toolkit/services/rules/conditional/pandas/: pandas_dataframe_checker.py
src/data_engineering_toolkit/services/scheduling/: job_builder.py  job_builder_factory.py  schedule_manager.py  scheduler_model.py
src/data_engineering_toolkit/services/state_machine/: managed_state_machine.py  state_machine_config_model.py  state_machine_manager.py
src/data_engineering_toolkit/services/storage/: default_storage_service.py  i_storage_service.py
src/data_engineering_toolkit/services/transformations/: i_transformations.py
src/data_engineering_toolkit/services/transformations/pandas/: pandas_transformations.py
src/data_engineering_toolkit/services/util/: enforce_function_signature.py  get_default_class_parameters.py  graceful_key_formatter.py
src/data_engineering_toolkit/services/validation/pandas/: pandas_validator.py
src/de_toolkit/: __init__.py
src/de_toolkit/brokers/storage/: i_storage_broker.py
src/de_toolkit/services/formatting/: i_formatter.py
src/de_toolkit/services/formatting/pandas/: pandas_formatter.py
src/de_toolkit/services/storage/: default_storage_service.py  i_storage_service.py
src/de_toolkit/services/transformations/: i_transformations.py
src/de_toolkit/services/transformations/pandas/: pandas_transformations.py
src/de_toolkit/services/util/: enforce_attributes_meta.py
