[tool.poetry]
name = "Data-Engineering"
version = "0.0.1"
description = "Handel Typical Data Engineering Tasks Handel Typical Data Engineering Tasks, including: Storage, Formatting, Tag / Label, Profiling, Cleaning, Rules, Transformations, Encryption"
authors = ["Ryan Julyan <ryan@julyan.biz>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
pandas = "^2.1.4"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"